--- a/game.html
+++ b/game.html
@@ -5,8 +5,40 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
+
+    <link rel="stylesheet" href="./game.css">
 </head>
-<body>
+<body> 
+    <main>
+        <h1>
+            ROCK, PAPER, SCISSORS
+        </h1>
+        <div class="score">
+            <h3 id="playerScore"></h3>
+            <h3>|</h3>
+            <h3 id="computerScore"></h3>
+        </div>
+        <div class="container mainGame">
+            <div class="player">
+                <button class="btn playerBtn" onclick="playRound('rock')">
+                    <img src="./img/rock_pixelart.png" height="200" alt="Rock Pixelart">
+                </button>
+                <button class="btn playerBtn" onclick="playRound('paper')">
+                    <img src="./img/paper_pixelart.png" height="200" alt="Paper Pixelart">
+                </button>
+                <button class="btn playerBtn" onclick="playRound('scissors')">
+                   <img src="./img/scissors_pixelart.png" height="200" alt="Scissors Pixelart"> 
+                </button>
+            </div>
+            <div class="computer">
+                <img src="./img/questionmark_pixelart.png" id="questionMark" height="200" alt="Questionmark Pixelart">
+            </div>
+        </div>
+        <div class="results">
+            <p></p>
+        </div>
+        
+    </main>
    
     <script src="/game.js"></script>
 </body>
