--- a/game.html
+++ b/game.html
@@ -10,13 +10,20 @@
 </head>
 <body> 
     <main>
-        <h1>
-            ROCK, PAPER, SCISSORS
-        </h1>
+        <div class="intro">
+            <h1>
+                ROCK, PAPER, SCISSORS
+            </h1>
+            <h4>
+                Who ever reaches 5 points first, wins. <br>
+                <br>
+                Good Luck!
+            </h4>
+        </div>
         <div class="score">
-            <h3 id="playerScore"></h3>
+            <h3>Player: <span id="playerScore">0</span></h3>
             <h3>|</h3>
-            <h3 id="computerScore"></h3>
+            <h3>Computer: <span id="computerScore">0</span></h3>
         </div>
         <div class="container mainGame">
             <div class="player">
@@ -36,9 +43,12 @@
         </div>
         <div class="container feedback-container">
             <h3 class="feedback"></h3>
+            <button id="restart" onclick="restartGame(this)">Restart?</button>
         </div>
     </main>
-   
+    <footer>
+        <p>Copyright ©2022 teamSuperdiv</p>
+    </footer>
     <script src="/game.js"></script>
 </body>
 </html>
